plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.nana'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-web-services'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.10.0'

	// Logback - 로깅을 위한 구현체 라이브러리
	implementation 'ch.qos.logback:logback-classic'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'

	// Spring Security: 인증/인가를 위한 보안 설정 의존성
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Apache POI - Excel 파일 처리를 위한 기본 라이브러리
	implementation 'org.apache.poi:poi:5.2.3'

	// Apache POI OOXML - .xlsx 형식의 Excel 파일 처리를 위한 확장 라이브러리
	implementation 'org.apache.poi:poi-ooxml:5.2.3'

	// Swagger http://localhost:8081/swagger-ui/index.html
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
